<resources>
    <string name="app_name">Mediteasy</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="register_heading">Please, register</string>
    <string name="signup_btn">Sign up</string>
    <string name="start_btn">Start</string>
    <string name="counter">00: 05: 00</string>

</resources>